unpackaged/main/default/objects/Brand_Country_Region_Allocation__c/Brand_Country_Region_Allocation__c.object-meta.xml
<CustomObject>
    <description>PS-MC-SB-13 This object is used to add allocations on region for single barrel 2.</description>
    <label>Region Level Allocation</label>
    <nameField>
        <label>Region Level Allocation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Region Level Allocations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>