unpackaged/main/default/objects/Brand_Country_Region_Allocation__c/fields/Cancelled_Allocations__c.field-meta.xml
<CustomField>
    <fullName>Cancelled_Allocations__c</fullName>
    <description>S-MC-SB-86 to maintain number of cancelled allocations</description>
    <label>Cancelled Allocations</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>