unpackaged/main/default/objects/Brand_Country_Region_Allocation__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Brand_Country_Allocation__c</columns>
    <columns>Region__c</columns>
    <columns>Allocations_Per_Interval__c</columns>
    <columns>Used_Allocations__c</columns>
    <columns>Is_Leaf_Node__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>